@@ -1,3 +1,7 @@
+2015-07-25  Kyle Agronick  <agronick@gmail.com>
+
+    Save a conversation just by right clicking the screen
+
 2015-07-24  Kyle Agronick  <agronick@gmail.com>
 
     Added users search box
